# MRI

./: .dockerignore  .gitignore  Dockerfile  MRI.md  package.json  pyproject.toml
.streamlit/: config.toml
scripts/: download_and_merge_products.js  download_and_merge_products_v20.js  process_molecule_v10.js
scripts/src/: advanced_stealth.js  extract_bioequivalence.py  search_molecule_stealth_v14.js  solo_id_v10.js
src/mri_app/: app.py  config.py  downloads.py  orchestrator.py  runner.py  tracker.py
src/mri_app/pages/: 1_New_Run.py  2_Progress.py  3_Results.py  4_History.py
