[project]
name = "mri"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.42",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pypdf>=4.3",
    "lxml>=5.3",
    "pdfplumber>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mri_app"]
